# drtcopy

./: Cargo.toml  README.md
.github/workflows/: buildAndPack.yml
bindings/: build.rs
src/: clipboard.rs  handle.rs  known_folders.rs  main.rs
