[package]
name = "drtcopy"
version = "0.1.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2018"

[dependencies]

[dependencies.windows]
version = "0.27.0"
features = [
    "alloc",
    "std",
    "ApplicationModel_DataTransfer",
    "Foundation",
    "System",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
