[package]
name = "drtcopy"
version = "0.3.0"
authors = ["robmikh <rob.mikh@outlook.com>"]
edition = "2018"

[dependencies]

[dependencies.windows]
version = "0.38.0"
features = [
    "alloc",
    "System",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
